[gd_scene load_steps=10 format=2]

[ext_resource path="res://gfx/SpriteSheets/Castle844x641.png" type="Texture2D" id=1]
[ext_resource path="res://gfx/CastleDoor.png" type="Texture2D" id=2]
[ext_resource path="res://props/Castle.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 844, 641 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 844, 0, 844, 641 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "open_door"
tracks/0/type = "value"
tracks/0/path = NodePath("door:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 0.0669861 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 150, -10 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 314, 285 )

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 54.5, 82.25 )

[node name="Castle" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
frames = SubResource( 6 )
playing = true

[node name="door" type="Sprite2D" parent="."]
position = Vector2( -37, 234 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_door = SubResource( 1 )

[node name="DoorDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorDetectionZone"]
position = Vector2( -56, 30 )
shape = SubResource( 2 )

[node name="WinZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinZone"]
position = Vector2( -34.5, 234.25 )
shape = SubResource( 3 )

[connection signal="body_entered" from="DoorDetectionZone" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DoorDetectionZone" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="WinZone" to="." method="_on_WinZone_body_entered"]
